--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir dist"
   },
+
+   "build2":"you"
   "keywords": [],
   "author": "",
   "license": "ISC",
